# cmake-3rd

./: .gitignore  CMakeLists.txt  main.cpp
func_shared/: CMakeLists.txt
func_shared/include/: func.h
func_shared/src/: func.cpp
func_static/: CMakeLists.txt
func_static/include/: func.h  func2.h
func_static/src/: func.cpp  func2.cpp
